# ipysheet

./: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  install.json  package.json  pyproject.toml  setup.py  tsconfig.json
.github/workflows/: build.yml
binder/: environment.yml  postBuild
examples/: Untitled2.ipynb
ipysheet_jabbera/: __init__.py  sheet.py  test_all.py
js/: package-lock.json  package.json
js/src/: extension.ts  labplugin.ts  sheet.ts
src/: extension.ts  index.ts  renderer.ts  sheet.ts
