[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.0"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["ipysheet_jabbera/labextension/static/style.js"]
ensured-targets = ["ipysheet_jabbera/labextension/static/style.js", "ipysheet_jabbera/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["ipysheet_jabbera/labextension/**", "yarn.lock", ".*", "package-lock.json"]
